k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-project
  namespace: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-project
  template:
    metadata:
      labels:
        app: flask-project
    spec:
      containers:
        - name: app
          image: sandymaraf/flask-project:8dcb12e0752b603fab6f1bb9baf9fa0a33d23fa1
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
